:fire: Replace Shadow plugin with standard Gradle Application plugin